@@ -6,8 +6,8 @@ DIST calculate-server-2.1.5.tar.bz2 151750 RMD160 f34df55deb04d4f324425c3c6b0a6b
 EBUILD calculate-server-2.1.3-r1.ebuild 4720 RMD160 e1c21c302c01909da0434f659dc8fbe306b0816d SHA1 6b891e5521f7dacce63046819f9ad07a1e03d41b SHA256 1318dea408b88f19c6b09e9bbfa5016e614468d4345e59c25fee5979c680f846
 EBUILD calculate-server-2.1.4-r1.ebuild 4975 RMD160 de6e61d71703146fdf6e678e4cdee7bd2185ed0b SHA1 d320d5bff814ef646962320adcdc0d40ebc719a3 SHA256 6518bff7925b444cca718fbd3293802ec3767280de4af7c61aa2fcb516702831
 EBUILD calculate-server-2.1.4.ebuild 4814 RMD160 79602f808ee3c732b64bdaef60ed0cfcd1edd877 SHA1 00bf30a53f5b3e3186d0fba84f29e76e46f5e48f SHA256 964d9675d71669188dd715d65a10eeb02d57aeee9588dff9ae8b6cd3db13f71b
-EBUILD calculate-server-2.1.5-r1.ebuild 5055 RMD160 80b01ecc0ab35c2d67db9a6474a104769c596c4a SHA1 331325a7fdb8fe8e2c9c34f938c3867ecaf5217e SHA256 73af969b4f58017bc9947d71ace1ee7b4e65baccdad67cfc4958a64c5811ba72
+EBUILD calculate-server-2.1.5-r2.ebuild 5238 RMD160 98b6f0fe86c12564ac3ae2d73004b45f1175b247 SHA1 ac476c40fa362c32b0f79c65e1cb621367f9db4b SHA256 1fbb7aaf9e484756dffbb82e5d9b8973f63e21059e2c7f9751357b1d34403186
 EBUILD calculate-server-2.1.5.ebuild 4907 RMD160 aad056c88659db379c43e399ae8dd8705c41d206 SHA1 d0a4331fbd632b4cad53a92956764f6fe1d65bba SHA256 f36e83cdcd402ecc87a8b1107126065a3f0eff5719d70ba198577d337bb6a6d3
 EBUILD calculate-server-9999.ebuild 936 RMD160 6e221554dc3733630e65b8d26adc3c7595c7321b SHA1 6db57ab7b8726816c3f670f26265b64f3d3bbf25 SHA256 80f5476958611cc7b2e500d5fa7e16f43ee2f7b0a01eda1b4093151e2a228976
-MISC ChangeLog 590 RMD160 a5b481c3a431c65c68da2567995423076a9e9f2b SHA1 18077aa62b8a7e96177d14556a8c7d94aa8c65b4 SHA256 feedf0eea5c5f168df12c9a823b296bef2a812d6a9a1539eeef0275fdbc71ad1
+MISC ChangeLog 791 RMD160 40932c22674f155e94b71510e15add49d63ab953 SHA1 c801a7dbcc0a8be1bed466fd41407279499b6dfd SHA256 31bbbcef9f5452c39e19aa8423531d632c5da0c1943c75b6e6ae9de769a53a9f
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
