@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-server-2.1.5-r2 (27 Nov 2009)
+
+  27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
+  -calculate-server-2.1.5-r1.ebuild, +calculate-server-2.1.5-r2.ebuild:
+  Fix dependence for samba
+
   12 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
   +calculate-server-2.1.5-r1.ebuild, +files/calculate-server-2.1.5-r1.patch:
   Added patch, which fixed changing comments of samba users
